tests/build/cases/widget/cannot_instantiate_widget_mixin.stderr
error: cannot instantiate mix-in
 --> cases/widget/cannot_instantiate_widget_mixin.rs:3:1
  |
3 | #[widget_mixin($crate::test_mixin)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
7 |     let _ = test_mixin!();
  |             ------------- in this macro invocation
  |
  = note: this error originates in the macro `test_mixin` (in Nightly builds, run with -Z macro-backtrace for more info)
